// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VerticalCardWithAction /> by default matches with snapshot 1`] = `
<div
  data-radium={true}
>
  <div
    style={
      Object {
        "marginBottom": "1.875rem",
        "marginTop": null,
      }
    }
  >
    <div
      data-radium={true}
    >
      <img
        alt=""
        data-radium={true}
        src=""
        style={
          Object {
            "display": "block",
            "width": "100%",
          }
        }
      />
    </div>
  </div>
  <div
    style={
      Object {
        "marginBottom": "1.875rem",
        "marginTop": "1.875rem",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": null,
          "marginTop": null,
        }
      }
    >
      <h1
        className="k-Title k-Title--senary k-Title--withoutMargin"
        style={
          Object {
            "color": "#222",
            "textAlign": "center",
          }
        }
      >
        Custom title
      </h1>
    </div>
    
  </div>
  <div
    style={
      Object {
        "marginBottom": null,
        "marginTop": "1.875rem",
        "textAlign": "center",
      }
    }
  >
    <button
      aria-label="button"
      className="k-Button k-Button--helium"
      tabIndex={null}
      type="button"
    >
      button
    </button>
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;

exports[`<VerticalCardWithAction /> with some props matches with snapshot 1`] = `
<div
  data-radium={true}
>
  <div
    style={
      Object {
        "marginBottom": "1.875rem",
        "marginTop": null,
      }
    }
  >
    <div
      data-radium={true}
    >
      <img
        alt="Image alt"
        data-radium={true}
        src="#image"
        style={
          Object {
            "display": "block",
            "width": "100%",
          }
        }
      />
    </div>
  </div>
  <div
    style={
      Object {
        "marginBottom": "1.875rem",
        "marginTop": "1.875rem",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": "0.9375rem",
          "marginTop": null,
        }
      }
    >
      <h1
        className="k-Title k-Title--senary k-Title--withoutMargin"
        style={
          Object {
            "color": "#222",
            "textAlign": "center",
          }
        }
      >
        Custom title
      </h1>
    </div>
    <div
      style={
        Object {
          "marginBottom": null,
          "marginTop": "0.9375rem",
        }
      }
    >
      <p
        className="k-Paragraph k-Paragraph--quaternary k-Paragraph--withoutMargin"
        style={
          Object {
            "color": "#222",
            "textAlign": "center",
          }
        }
      >
        Custom text
      </p>
    </div>
  </div>
  <div
    style={
      Object {
        "marginBottom": null,
        "marginTop": "1.875rem",
        "textAlign": "center",
      }
    }
  >
    <button
      aria-label="button"
      className="k-Button k-Button--helium"
      tabIndex={null}
      type="button"
    >
      button
    </button>
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;
